--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-.big-box {
+html {
     background-color: whitesmoke;
+}
+
+.big-box {
     display: flex;
     justify-content: center;
     padding-top: 80px;
@@ -16,4 +19,9 @@
 
 label {
     font-size: 24px;
+}
+
+#password {
+    max-width: 60%;
+    overflow: scroll;
 }
